syntax = "proto3";

option csharp_namespace = "ScoreTracker.Shared";

import "common.proto";

service Results {
  rpc GetResults (ResultsRequest) returns (stream Result);
}

message ResultsRequest {
  string MeetId = 1;
  repeated string Divisions = 2;
}

message Result {
  string Id = 1;
  int32 Season = 2;
  int32 MeetId = 3;
  string Session = 4;
  string Level = 5;
  string AgeGroup = 6;
  int32 AthleteId = 7;
  string AthleteName = 8;
  int32 ClubId = 9;
  string Club = 10;
  Score Floor = 11;
  Score Horse = 12;
  Score Rings = 13;
  Score Vault = 14;
  Score PBars = 15;
  Score HBar = 16;
  Score AllAround = 17;
  string MeetIdLevelDivision = 18;
}

message Score {
  Decimal EScore = 1;
  Decimal DScore = 2;
  Decimal NeutralDeductions = 3;
  Decimal FinalScore = 4;
  int32 Rank = 5;
}